--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -60,15 +60,20 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     //FTC libraries
-    implementation "com.github.modular-ftc:robotcontroller-repackaged:$ftc_version.1"
-    implementation "com.github.modular-ftc:robotcore-repackaged:$ftc_version.5"
+    implementation "com.github.modular-ftc:robotcontroller-repackaged:$ftc_version.3-lite"
+    implementation "com.github.modular-ftc:robotcore-repackaged:$ftc_version.5-lite"
+    implementation "com.github.modular-ftc:ftc-common-repackaged:$ftc_version.0-lite"
+
     implementation "org.first.ftc:hardware:$ftc_version"
-    implementation "org.first.ftc:ftc-common:$ftc_version"
     implementation "org.first.ftc:analytics:$ftc_version"
     implementation "org.first.ftc:wireless-p2p:$ftc_version"
     implementation "com.github.modular-ftc:vuforia-repackaged:$ftc_version.0"
 
-    // The Pattonville Robotics shared libraries are included by default. Remove the following line to stop using them.
-    implementation "com.github.Pattonville-Robotics:Common-Code:d9d0d5e56f"
+    //The Pattonville Robotics shared libraries are included by default. Remove the following line to stop using them.
+    implementation "com.github.Pattonville-Robotics:Common-Code:d9d0d5e56f", {
+        exclude group: 'com.github.modular-ftc', module: 'robotcore-repackaged'
+        exclude group: 'com.github.modular-ftc', module: 'robotcontroller-repackaged'
+        exclude group: 'org.first.ftc', module: 'ftc-common'
+    }
 }
 
