--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -20,7 +20,7 @@ android {
         targetSdkVersion 19
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        versionCode 1
+        versionCode 2
         versionName "$ftc_version"
     }
 
@@ -34,7 +34,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
-            debuggable true
             ndk {
                 abiFilters "armeabi-v7a"
             }
@@ -57,11 +56,11 @@ android {
 
 dependencies {
     //Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //FTC libraries
-    implementation "com.github.modular-ftc:robotcontroller-repackaged:$ftc_version.3-lite"
-    implementation "com.github.modular-ftc:robotcore-repackaged:$ftc_version.5-lite"
+    implementation "com.github.modular-ftc:robotcontroller-repackaged:$ftc_version.0-lite"
+    implementation "com.github.modular-ftc:robotcore-repackaged:$ftc_version.0-lite"
     implementation "com.github.modular-ftc:ftc-common-repackaged:$ftc_version.0-lite"
 
     implementation "org.first.ftc:hardware:$ftc_version"
