Update dependencies to 5.2

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -21,7 +21,7 @@ android {
         targetSdkVersion 19
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        versionCode 3
+        versionCode 4
         versionName "$ftc_version"
     }
 
@@ -60,14 +60,14 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //Repackaged FTC libraries
-    implementation "com.github.modular-ftc:robotcontroller-repackaged:$ftc_version.1-lite"
-    implementation "com.github.modular-ftc:robotcore-repackaged:$ftc_version.1-lite"
+    implementation "com.github.modular-ftc:robotcontroller-repackaged:$ftc_version.0-lite"
+    implementation "com.github.modular-ftc:robotcore-repackaged:$ftc_version.0-lite"
     implementation "com.github.modular-ftc:ftc-common-repackaged:$ftc_version.0-lite"
 
     //Original FTC libraries
     implementation "org.first.ftc:hardware:$ftc_version"
 
     //The Pattonville Robotics shared libraries are included by default. Remove the following line to stop using them.
-    implementation "com.github.Pattonville-Robotics:Common-Code:3992c9f"
+    implementation "com.github.Pattonville-Robotics:Common-Code:3.6.2"
 }
 
